[gd_scene load_steps=2 format=3 uid="uid://dlauftsvaxiet"]

[ext_resource type="Script" path="res://scenes/menu/SettingsMenu/settings_ui.gd" id="1_h1b5b"]

[node name="settings_ui" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1b5b")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ReturnButton" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Zurück zu Hauptmenu"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Einstellungen"

[node name="Placeholder" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Placeholder2" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Auflösung"
horizontal_alignment = 1

[node name="Placeholder" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Placeholder2" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "2560x1440"
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "800x600"
popup/item_3/id = 3

[node name="Placeholder3" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Placeholder4" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="SubmitButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Übernehmen"

[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer2/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="item_selected" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/SubmitButton" to="." method="_on_submit_pressed"]
